[package]
name = "iter-set"
description = "Set operations on sorted, deduplicated iterators."
version = "2.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/iter-set"
documentation = "https://docs.rs/iter-set"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["algorithms", "data-structures", "no-std"]

[dependencies]